setup google authentication

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,3 @@
 DB_URL="REPLACE ME WITH YOUR DB CONNECTION"
+GOOGLE_CLIENT_ID="REPLACE WITH GOOGLE CREDENTIALS"
+GOOGLE_SECRET_ID="REPLACE WITH GOOGLE CREDENTIALS"
