create room and added options to the auth

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 DB_URL="REPLACE ME WITH YOUR DB CONNECTION"
 GOOGLE_CLIENT_ID="REPLACE WITH GOOGLE CREDENTIALS"
 GOOGLE_SECRET_ID="REPLACE WITH GOOGLE CREDENTIALS"
+NEXTAUTH_SECRET="YOUR JWT SECRET"
